<resources>
    <string name="app_name">Coffee</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="please_wait">Mohon Tunggu....</string>
    <string name="login">Login</string>
    <string name="error_session_title">Session timeout.</string>
    <string name="error_session_timeout_message">Session timeout. Please login again.</string>
    <string name="masuk_menggunakan_nomor_telepon_anda">Masuk menggunakan nomor telepon Anda</string>
    <string name="phone">Nomor Telepon</string>
    <string name="deskripsi">For all you chocolate lovers out there, you’ll fall in love with a mocha (or maybe you already have). The mocha is a chocolate espresso drink with steamed milk and foam.</string>
    <string name="internet">Connection</string>
    <string name="masuk">Login</string>
    <string name="connection">No Internet Connection!</string>
    <string name="masukkan_kode_verifikasi_anda">Masukkan kode verifikasi Anda</string>
    <string name="kirim_ulang"><u>Kirim Ulang</u></string>
    <string name="verifikasi">Kirim Verifikasi</string>
    <string name="masukkan_user_login">Lengkapi data dibawah ini</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="alamat">Alamat Rumah</string>
    <string name="daftar">Daftar</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Product</string>
    <string name="title_notifications">Profile</string>
    <string name="_1">1</string>
    <string name="default_name">Ihsan Abdurahman</string>
    <string name="show"><u>Show more</u></string>
    <string name="spesial_promo">Spesial Promo</string>
    <string name="tagihan_anda">Tagihan Anda</string>
    <string name="default_invoice">Invoice November 2021</string>
    <string name="status">Status</string>
    <string name="paid">PAID</string>
    <string name="finaly">FINAL</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="rp_200_000">Rp. 200.000</string>
    <string name="no_router">No. Router</string>
    <string name="ard_1000">ARD-1000</string>
    <string name="invoice_desember_2021">Invoice Desember 2021</string>
    <string name="pencarian">Pencarian</string>
    <string name="edit">Edit</string>
    <string name="about_me">About Me</string>
    <string name="ganti_password">Ganti Nomor Handphone</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="cara">Panduan Penggunaan</string>
    <string name="saran">Saran</string>
    <string name="logout">Logout</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="require">Tidak Boleh Kosong</string>
    <string name="invalid">PIN Salah</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="steamed_milk">Steamed Milk</string>
    <string name="ingredients">Ingredients :</string>
    <string name="detail">Detail</string>
    <string name="tutup">Tutup</string>
</resources>