<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.login.LoginActivity">

    <data>

        <variable
            name="viewModel"
            type="com.xd.ihsan.coffee.view.activities.login.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen150dp"
                android:background="@color/brand"
                android:gravity="center"
                android:padding="@dimen/dimen16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:fontFamily="@font/qs_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text20sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/coffee_beans"
                    app:tint="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen50dp"
                android:background="@drawable/wave" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dimen16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/enter_pin"
                    android:textColor="@color/brand" />

                <com.libizo.CustomEditText
                    android:id="@+id/et_pin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen16dp"
                    android:background="@color/white"
                    android:fontFamily="@font/qs_medium"
                    android:inputType="number"
                    android:padding="@dimen/dimen10dp"
                    app:libIZO_clearIconTint="@color/brand"
                    app:libIZO_setBorderColor="@color/brand"
                    app:libIZO_setBorderView="true"
                    app:libIZO_setClearIconVisible="true"
                    app:libIZO_setCornerRadius="@dimen/dimen5dp"
                    app:libIZO_setPrefixTextColor="@color/black"
                    app:libIZO_setStrokeWidth="1dp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_masuk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen16dp"
                    android:background="@drawable/bg_login"
                    android:fontFamily="@font/qs_bold"
                    android:text="@string/masuk"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text16sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</layout>